# clickhouse-cpp

./: .gitignore  .travis.yml  README.md
clickhouse/columns/: decimal.cpp  decimal.h  factory.cpp  numeric.cpp  numeric.h
clickhouse/types/: int128_type.h  type_parser.cpp  type_parser.h  types.cpp  types.h
contrib/gtest/: CMakeLists.txt
tests/simple/: main.cpp
ut/: CMakeLists.txt  client_ut.cpp  columns_ut.cpp  type_parser_ut.cpp  types_ut.cpp
